--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
   <head>
-    <title> hello world </title>
+    <head> hello world </head>
   </head>
   <body>
    <h1> welcome </h1>
